--- a/sebelah/css/style.css
+++ b/sebelah/css/style.css
@@ -1,10 +1,18 @@
-html {
-  font-size: 100%;
-}
+/* Google Fonts */
+@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
 
+html {
+  min-height: 100%;
+  overflow: hidden;
+}
+body {
+  background-color: #0b0c10;
+  height: calc(100vh - 8em);
+  padding: 4em;
+}
 .container {
   width: 100%;
-  margin: 10px;
+  /* margin: 10px; */
 }
 
 .nav-bar {
@@ -12,22 +20,69 @@ html {
   left: 50;
 }
 .nav-bar h1 {
-  text-align: left;
   font-size: 20px;
   color: #66fcf1;
   font-style: italic;
+  font-weight: bold;
+  margin: 10px 0;
 }
-
+.nav-bar .nav-bar-1 {
+  list-style: none;
+  justify-content: space-around;
+  margin: 0 10px;
+  cursor: pointer;
+  font-size: 15px;
+  color: #66fcf1;
+  font-style: italic;
+  padding: 5px;
+}
 .content {
-  right: 100px;
-  left: 10px;
-  background-color: #66fcf1;
+  margin: 10px 0;
+  text-align: center;
+  margin: auto;
+  padding: 10px;
+}
+.line-1 {
+  color: #66fcf1;
+  position: relative;
+  top: 50%;
+  width: 24em;
+  margin: 0 auto;
+  border-right: 2px;
+  font-size: 50px;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  transform: translateY(-150);
+  font-weight: bold;
+  font-style: italic;
+}
+/* animation */
+.anim-typewriter {
+  animation: typewriter 4s steps(44) 1s 1 normal both,
+    blinkTextCrusor 500ms steps(44) infinite normal;
+}
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+  to {
+    width: 24em;
+  }
+}
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: #66fcf1;
+  }
+  to {
+    border-right-color: transparent;
+  }
 }
 
 /* footer */
-.footer{
-    display: flex;
-    flex-flow: row wrap;
-    padding: 30px 30px 20px 30px;
-    color: #C5C6C7;
+.footer {
+  display: flex;
+  flex-flow: row wrap;
+  padding: 30px 30px 20px 30px;
+  color: #66fcf1;
 }
